--- a/css-yassine/style.css
+++ b/css-yassine/style.css
@@ -10,7 +10,9 @@
     flex-direction: row;
     width: 100%;
     flex-wrap: wrap;
-    padding-bottom: 100px;
+    gap: 100px;
+    border-radius: 15px;
+    padding: 50px 50px;
 }
 .centre h2{
     font-size: 80px;
@@ -21,12 +23,15 @@
     font-size: auto;
     text-align: center;
 }
+.centre a{
+    
+}
 .imagination{
     display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
-    width: 50%;
+    width: 40%;
     
 }
 .imagination img{
@@ -38,7 +43,8 @@ button{
     font-weight: bold;
     color: white;
     border-radius: 12px;
-    height: 25px;
+    height: 40px;
+    width: 80px;
     border: none;
     transition: all 0.5s ease;
 }
@@ -72,4 +78,138 @@ button:hover{
 }
 .bgr{
     background-color: #eaeaea;
+}
+/*rayane store*/
+.category-filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 80px;
+}
+.filter-button{
+    width: 100px;
+}
+.stylY {
+    padding:0px 20px;
+    color: #3b3838;
+}
+.stylinpY {
+    padding: 20px;
+    border: #1d80d0;
+}
+#searchInput {
+    
+    border-radius: 10px;
+    height: 30px;
+    width: 450px;
+}
+.pagination {
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 40%;
+}
+#prevPage,#nextPage{
+    padding: 5px 10px;
+    background-color: #0074D9;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    margin: 5px;
+}
+/* Style de base pour la liste de panier */
+#cart {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.add-to-cart{
+    width: 100px;
+    font-size: 10px;
+}
+.delete-box{
+    font-size: 10px;
+}
+#cart li {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Style du bouton de suppression */
+#cart li button {
+    background-color: #0074D9;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+#cart li button:hover {
+    background-color: #0074D9;
+}
+
+/* Style du champ de quantité */
+#cart li input {
+    width: 30px;
+    text-align: center;
+}
+
+
+/*login*/
+.login-container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e4e3e0;
+    padding: 40px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.login-container h2 {
+    margin: 0 0 20px;
+}
+
+.login-container label {
+    display: block;
+    margin: 10px 0;
+    text-align: left;
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.login-container input {
+    width: 300px;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.login-container button {
+    width: 250px;
+    background-color: #0074D9;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.login-container .error-message {
+    color: red;
+    margin: 10px 0;
 }
