--- a/administration/administration.css
+++ b/administration/administration.css
@@ -96,3 +96,56 @@ h1 {
     cursor: pointer;
     box-sizing: border-box;
 }
+/login/
+.login-container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e4e3e0;
+    padding: 40px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.login-container h2 {
+    margin: 0 0 20px;
+}
+
+.login-container label {
+    display: block;
+    margin: 10px 0;
+    text-align: left;
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.login-container input {
+    width: 300px;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
+
+.login-container button {
+    width: 250px;
+    background-color: #0074D9;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.login-container .error-message {
+    color: red;
+    margin: 10px 0;
+}
